task-5/non-admin-api-allow.yaml
# Разрешаем трафик между front-end и back-end-api
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: client-api-allow
  namespace: production

spec:
  podSelector:
    matchLabels:
      role: back-end-api
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              role: front-end
      ports:
        - protocol: TCP
          port: 80
---
# Разрешаем трафик между admin-front-end и admin-back-end-api
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: admin-api-allow
  namespace: production

spec:
  podSelector:
    matchLabels:
      role: admin-back-end-api
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              role: admin-front-end
      ports:
        - protocol: TCP
          port: 80
---
# Полностью изолируем новый сервис nginx
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: nginx-isolate
  namespace: production

spec:
  podSelector:
    matchLabels:
      role: nginx
  policyTypes:
    - Ingress
  ingress: []
